# QtHyperX

./: CMakeLists.txt  default.nix  org.kde.qthyperx.desktop  org.kde.qthyperx.metainfo.xml  package.nix  shell.nix
android/: AndroidManifest.xml  build.gradle
src/: CMakeLists.txt  HyperXBackend.cpp  HyperXBackend.hpp  main.cpp  qthyperxapplication.cpp  qthyperxapplication.h  qthyperxconfig.kcfgc
src/qml/: Main.qml
src/settings/: CMakeLists.txt  QtHyperXConfigurationView.qml
